[gd_scene load_steps=9 format=3 uid="uid://dauvhpoq5jl01"]

[ext_resource type="Script" uid="uid://mtiyemjd232k" path="res://View/Asteroids/Asteroid.gd" id="1_4jvpe"]
[ext_resource type="Material" uid="uid://db4nowr7gcwtr" path="res://Shaders/canvas_group_outline_material.tres" id="2_vac4e"]
[ext_resource type="Texture2D" uid="uid://deubadq61yeyl" path="res://Sprites/Asteroids/asteroid6.png" id="3_4jvpe"]
[ext_resource type="Texture2D" uid="uid://rgglrkwdlpfl" path="res://Sprites/Ship/target.png" id="4_dcj4a"]
[ext_resource type="Script" uid="uid://0epgfa68wioe" path="res://Utilities/AutoStartAnimationPlayer.gd" id="5_sfc81"]

[sub_resource type="Animation" id="Animation_p7vrq"]
resource_name = "Highlight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.52, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.55, 0.55), Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_n68h7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_um33k"]
_data = {
&"Highlight": SubResource("Animation_p7vrq"),
&"RESET": SubResource("Animation_n68h7")
}

[node name="OreAsteroid1" type="Node2D" node_paths=PackedStringArray("asteroid_sprite", "target_sprite")]
script = ExtResource("1_4jvpe")
asteroid_sprite = NodePath("CanvasGroup/AsteroidSprite2D")
target_sprite = NodePath("TargetSprite2D")
modulate_asteroid_by_ore_content = true
titanium_ore_color = Color(0.371148, 0.51155, 0.657191, 1)
carbon_ore_color = Color(0.06, 0.06, 0.06, 1)
water_ore_color = Color(0.171533, 1.15514e-05, 0.936616, 1)
palladium_ore_color = Color(1, 0.7, 0, 1)
pyradium_ore_color = Color(1, 0, 1, 1)

[node name="CanvasGroup" type="CanvasGroup" parent="."]
material = ExtResource("2_vac4e")

[node name="AsteroidSprite2D" type="Sprite2D" parent="CanvasGroup"]
modulate = Color(0.365968, 0.628505, 0.680061, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_4jvpe")

[node name="Area2D" type="Area2D" parent="CanvasGroup/AsteroidSprite2D"]
scale = Vector2(2, 2)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasGroup/AsteroidSprite2D/Area2D"]
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(44.5, -76.6, 44.5, -75.3, 38.3, -74.5, 33.1, -74.5, 13.1, -65.5, 10.8, -65.5, -37.5, -27.5, -37.5, -26.7, -64.1, -9.5, -66.3, -9.5, -92.3, 15.5, -93.6, 15.5, -106.6, 37.5, -108.7, 37.5, -107.5, 51.7, -107.5, 56.1, -102.5, 63.1, -102.5, 65.4, -90.5, 75.4, -90.5, 77.1, -70.5, 82, -70.5, 83.3, -57.6, 84.5, -53.3, 84.5, -35.1, 80.5, -31, 80.5, -10, 70.5, -7.8, 70.5, 7.2, 59.5, 9.2, 59.5, 58.2, 18.5, 60.4, 18.5, 86.4, -9.5, 87.7, -9.5, 97.6, -27.5, 99.5, -27.5, 99.5, -44, 96.5, -50, 96.5, -53.3, 83.5, -67.4, 83.5, -68.9, 68.5, -74, 68.5, -75.4)

[node name="TargetSprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.29, 1, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_dcj4a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TargetSprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_um33k")
}
script = ExtResource("5_sfc81")
auto_start_animation = "Highlight"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-64, -64, 128, 128)

[connection signal="input_event" from="CanvasGroup/AsteroidSprite2D/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="CanvasGroup/AsteroidSprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="CanvasGroup/AsteroidSprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
